--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,7 @@
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    border:solid 2px black;
 }
 h1, h2{
     -webkit-text-stroke: 2px black;
@@ -14,6 +15,7 @@ h1, h2{
 }
 .result img{
     height:150px;
+    border:solid 1px black;
 }
 .top-text{
     position: absolute;
@@ -33,6 +35,6 @@ button{
 .form__inputs{
     margin-top: 15px;
 }
-.row{
+.row, .result{
     margin:20px 0px 0px 0px;
 }
